ipc/ipdl/test/ipdl/ok/PMessageTainted.ipdl
intr protocol PMessageTainted {
child:
    async foo() tainted;
};
