ipc/ipdl/test/ipdl/error/trans_WrongName4.ipdl
rpc protocol trans_WrongName4 {

child:
    rpc Msg();
    delete();

state S1:
    send Msg goto S1;
    send delete;
};
